--- a/c++/.vscode/settings.json
+++ b/c++/.vscode/settings.json
@@ -34,5 +34,9 @@
     "**/.vscode/**"
   ],
   "C_Cpp_Runner.useAddressSanitizer": true,
-  "C_Cpp_Runner.showCompilationTime": false
+  "C_Cpp_Runner.showCompilationTime": false,
+  "files.associations": {
+    "iostream": "cpp",
+    "iosfwd": "cpp"
+  }
 }
